@@ -1,0 +1,62 @@
+/*
+ * +---------------------------------------------------------------------------+
+ * | JMWS - Java Managed Web System                                            |
+ * +---------------------------------------------------------------------------+
+ * | UserLogInRemote - Defines the SessionBean Remote interface                |
+ * |                   for the User logging in operation.                      |
+ * +---------------------------------------------------------------------------+
+ * | Copyright (C) 2000,2001 by the following authors:                         |
+ * |                                                                           |
+ * | Authors: Mikael Barbeaux  - mikaelbarbeaux@users.sourceforge.net          |
+ * +---------------------------------------------------------------------------+
+ * |                                                                           |
+ * | This program is free software; you can redistribute it and/or             |
+ * | modify it under the terms of the GNU General Public License               |
+ * | as published by the Free Software Foundation; either version 2            |
+ * | of the License, or (at your option) any later version.                    |
+ * |                                                                           |
+ * | This program is distributed in the hope that it will be useful,           |
+ * | but WITHOUT ANY WARRANTY; without even the implied warranty of            |
+ * | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the             |
+ * | GNU General Public License for more details.                              |
+ * |                                                                           |
+ * | You should have received a copy of the GNU General Public License         |
+ * | along with this program; if not, write to the Free Software Foundation,   |
+ * | Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.           |
+ * |                                                                           |
+ * +---------------------------------------------------------------------------+
+ */
+
+package org.jmws.session.user.login;
+
+import java.rmi.RemoteException;
+
+import javax.ejb.EJBObject;
+import javax.ejb.FinderException;
+
+/**
+ * UserLogInRemote
+ * 
+ * @author Mikael Barbeaux
+ */
+public interface UserLogInRemote extends EJBObject {
+
+	/**
+	 * Check a log in operation.
+	 * 
+	 * @param login
+	 * @param password
+	 * @return
+	 * @throws FinderException
+	 * @throws UserWrongPasswordException
+	 * @throws UserInactiveException
+	 * @throws RemoteException
+	 */
+	public Boolean checkLogIn(
+		String login,
+		String password
+	) throws FinderException, UserWrongPasswordException,
+			UserInactiveException, RemoteException;
+
+
+}
